# Instant-messaging-service

./: .gitignore  CMakeLists.txt  README.md  init_pipes.sh
includes/: config.hpp  main_handler_loop.hpp  messenger_service.hpp  postpone_service.hpp  thread.hpp  user_storage.hpp
includes/handlers/: handle.hpp  messenger_service.hpp  postpone_handlers.hpp  user.hpp
includes/os/: mutex.hpp  thread.hpp
includes/protos/: main.pb.h
includes/transport/: PipeTransport.hpp
protos/: main.proto
src/: CMakeLists.txt  main_handler.cpp  main_handler_test.cpp  messenger_service.cpp  postpone_service.cpp  server.cpp  threads_unix.cpp
src/client/: CMakeLists.txt  client.cpp
src/handlers/: CMakeLists.txt  handle.cpp  messenger_service.cpp  postpone_handler.cpp  user.cpp
src/os/: CMakeLists.txt  mutex.cpp  threads_unix.cpp
src/transport/: CMakeLists.txt  PipeTransport.cpp  PipeTransport_test.cpp
